# limcode

./: .gitignore  ANSWER.md  BUFFER_REUSE_OPTIMIZATION.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CPP_BEAST_MODE.md  CPP_CRUSHES_RUST.md  CPP_OPTIMIZATION_RESULTS.md  CTestTestfile.cmake  Cargo.toml  FINAL_PERFORMANCE_TABLE.md  FINAL_VERDICT.md  Makefile  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_VALIDATION.md  README.md  STATUS.md  bench_theoretical_max  bench_true_maximum  benchmark_massive_scale.sh  benchmark_pure_cpp  build.rs  compile_commands.json  cpp_snapshot_test  large_memory_optimized.txt
.cargo/: config.toml
.github/workflows/: benchmark.yml  ci.yml  cpp_vs_rust_benchmark.yml  publish-crate.yml
Testing/Temporary/: CTestCostData.txt
benches/: all_three_comparison.rs  compare_all.rs  large_memory.rs  limcode_vs_bincode.rs  massive_scale.rs  memory_bandwidth.rs  parallel.rs  serialize_overhead.rs  solana_limcode_vs_bincode.rs  solana_limcode_vs_wincode.rs  solana_real_data.rs  test_fast_nt_memcpy.rs  vs_wincode.rs
benchmark/: MAXIMUM_SPEED.cpp  THEORETICAL_MAXIMUM.cpp  avx512_32x_unroll.cpp  avx512_optimal.cpp  bench.cpp  bench_absolute_max.cpp  bench_df4a8da_extended.cpp  bench_hardware_max.cpp  bench_push_to_max.cpp  bench_theoretical_max.cpp  bench_true_maximum.cpp  benchmark_pure_cpp.cpp  beyond_limits.cpp  beyond_limits_fixed.cpp  beyond_limits_real.cpp  compare_cpp_vs_wincode.sh  cpp_serialize_test.cpp  cpp_snapshot_bench.cpp  cpp_snapshot_fast.cpp  cpp_snapshot_mmap.cpp  cpp_snapshot_mmap_input.cpp  cpp_snapshot_mt.cpp  cpp_snapshot_mt2.cpp  cpp_snapshot_pipe.cpp  cpp_snapshot_test.cpp  cpp_snapshot_ultra.cpp  cpp_snapshot_zstdmt.cpp  cpp_solana_bench.cpp  cpp_solana_test.cpp  cpp_standalone_bench.cpp  cpp_theoretical_max.cpp  cpp_vs_wincode_solana.cpp  experimental_optimizations.cpp  extreme_bench.cpp  final_overhead_analysis.cpp  insane_bench.cpp  investigate_64mb.cpp  main.cpp  minimal_test.cpp  multithreaded_max.cpp  (+15 more)
build_cpp/: CTestTestfile.cmake  FINAL_RESULTS.txt  Makefile  compile_commands.json  cpp_bincode_compat  cpp_standalone_bench  extreme_bench  insane_bench  investigate_64mb  minimal_test  pure_memcpy_bench  serialize_bench_direct  table_bench  tune_system.sh  ultimate_bench  ultra_fast_bench
build_test/: CTestTestfile.cmake  Makefile  compile_commands.json  optimized_bench  pgo_profile
docs/: BINCODE_COMPATIBILITY.md  CPP_OPTIMIZATION_GUIDE.md  FAST_PATH_RESULTS.md  INLINE_ASSEMBLY_INVESTIGATION.md  OPTIMIZATIONS.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_SUMMARY.md  SETUP_SUMMARY.md  WINCODE_SPEED_ACHIEVED.md  large_memory_results.txt
examples/: analyze_wincode_speed.rs  benchmark_all_four.rs  benchmark_comprehensive.rs  benchmark_fast_path.rs  benchmark_heavy.rs  benchmark_large_blocks.rs  benchmark_reuse.rs  benchmark_standalone.rs  benchmark_ultra.rs  compare_with_wincode.rs  full_snapshot.rs  quick_comparison.rs  show_bytes.rs  simple_bench.rs  snapshot_demo.rs  solana_bincode_test.rs  solana_tx_test.rs  test_1_billion.rs  test_auto_multithread.rs  test_bincode_compat.rs  test_decoder_only.rs  test_encoder_only.rs  test_inline_asm.rs  test_real_snapshot.rs  test_serialize_into.rs  validate_cpp_vs_wincode.rs  validate_solana_cpp_vs_bincode.rs
include/: limcode.h  limcode_ffi.h  limcode_parallel.h
include/limcode/: bincode.h  extreme_fast.h  insane_fast.h  limcode.h  optimized.h  snapshot.h  types.h  ultimate_fast.h  ultra_fast.h  wincode.h
rust/limcode-sys/: Cargo.toml  build.rs
rust/limcode-sys/src/: lib.rs
rust/src/: deserializer.rs  lib.rs  serializer.rs  snapshot.rs  ultra_fast.rs
src/: limcode_benchmark_ffi.cpp  limcode_ffi.cpp  snapshot.cpp
tests/: bincode_compat.rs  cpp_bincode_compat.cpp  full_compat.rs  output_validation.rs  struct_compat.rs  test_limcode.cpp  test_simd_path.rs  validate_wincode.rs
