[package]
name = "limcode"
version = "0.1.3"
edition = "2021"
authors = ["Slonana Labs", "Rin Fhenzig @ OpenSVM"]
license = "MIT"
description = "Ultra-high-performance binary serialization with AVX-512 SIMD and non-temporal memory operations"
repository = "https://github.com/slonana-labs/limcode"
homepage = "https://github.com/slonana-labs/limcode"
keywords = ["serialization", "solana", "blockchain", "simd", "performance"]
categories = ["encoding", "no-std"]
readme = "README.md"

[lib]
name = "limcode"
path = "rust/src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5"
wincode = "0.2.5"
bincode = "1.3"  # 3.0 is a placeholder, 1.3 is latest stable

[build-dependencies]
cc = "1.0"

[features]
default = ["simd", "parallel"]
simd = []
parallel = []
serde = ["dep:serde"]

[profile.release]
opt-level = 3
lto = false  # Disabled: conflicts with C++ FFI linking
codegen-units = 1
panic = "abort"
strip = false

[profile.bench]
inherits = "release"

