[package]
name = "limcode"
version = "0.1.3"
edition = "2021"
authors = ["Slonana Labs", "Rin Fhenzig @ OpenSVM"]
license = "MIT"
description = "100% bincode-compatible serialization. Same interface as wincode."
repository = "https://github.com/slonana-labs/limcode"
homepage = "https://github.com/slonana-labs/limcode"
keywords = ["serialization", "bincode", "serde", "encoding"]
categories = ["encoding"]
readme = "README.md"

[lib]
name = "limcode"
path = "rust/src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
serde_json = "1.0"
wincode = "0.2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

