[package]
name = "limcode"
version = "0.1.5"
edition = "2021"
authors = ["Slonana Labs", "Rin Fhenzig @ OpenSVM"]
license = "MIT"
description = "Ultra-fast bincode-compatible serialization library with SIMD optimizations and automatic multithreading. 9x faster than bincode, works with any Rust type."
repository = "https://github.com/slonana-labs/limcode"
homepage = "https://github.com/slonana-labs/limcode"
keywords = ["serialization", "solana", "blockchain", "simd", "performance"]
categories = ["encoding", "no-std"]
readme = "README.md"

[lib]
name = "limcode"
path = "rust/src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
wincode = "0.2.5"
rayon = "1.10"
crossbeam = "0.8"
tokio = { version = "1.0", features = ["rt", "sync"], optional = true }
zstd = { version = "0.13", optional = true }
crc32fast = { version = "1.4", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5"
wincode = "0.2.5"
bincode = "1.3"  # 3.0 is a placeholder, 1.3 is latest stable

[build-dependencies]
cc = "1.0"

[features]
default = ["simd", "parallel"]
simd = []
parallel = []
async = ["tokio"]
compression = ["zstd"]
checksum = ["crc32fast"]
migration = ["compression", "checksum"]  # All migration helpers

[profile.release]
opt-level = 3
lto = false  # Disabled: conflicts with C++ FFI linking
codegen-units = 1
panic = "abort"
strip = false

[profile.bench]
inherits = "release"

[[bench]]
name = "limcode_vs_bincode"
harness = false

[[bench]]
name = "parallel"
harness = false

[[bench]]
name = "vs_wincode"
harness = false

[[bench]]
name = "massive_scale"
harness = false

[[bench]]
name = "large_memory"
harness = false

[[bench]]
name = "memory_bandwidth"
harness = false

[[bench]]
name = "serialize_overhead"
harness = false

[[bench]]
name = "test_fast_nt_memcpy"
harness = false

