[package]
name = "limcode-sys"
version = "0.1.0"
edition = "2021"
authors = ["Slonana Labs", "Rin Fhenzig @ OpenSVM"]
license = "MIT"
description = "Raw FFI bindings to limcode C++ library"
repository = "https://github.com/slonana-labs/limcode"
links = "limcode"

[lib]
name = "limcode_sys"

[build-dependencies]
cc = "1.0"

# bindgen disabled - using pre-written bindings to avoid llvm-dev dependency in CI
# bindgen = "0.70"

[dependencies]
